# simple-model-downloader

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
js/: index.js
