[project]
name = "simple-model-downloader"
description = ""
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["aiohttp>=3.8.0"]

[project.urls]
Repository = "https://github.com/Lalimec/simple-model-downloader"
#  Used by Comfy Registry https://comfyregistry.org

[tool]
[tool.comfy]
PublisherId = "lalimec"
DisplayName = "simple-model-downloader"
Icon = ""
